--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,29 +12,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Moelas"
         tools:targetApi="31">
-
-
-
+        <activity
+            android:name=".categoryScreen"
+            android:exported="false" />
         <activity
             android:name=".landingScreen"
-            android:exported="false">
-        </activity>
-
-
-
+            android:exported="false"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-
     </application>
 
 </manifest>
